Fix Cards Text Wrapping

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -2,9 +2,11 @@
   border-radius: 8px;
   margin: 10px 0;
   box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.06);
+  max-width: 100%;
   overflow: hidden;
 }
 
-// .card-text {
-//   word-wrap: break-word;
-// }
+.text-wrap {
+  word-wrap: break-word;
+}
+
